# verilog_tutorials

./: .gitignore  CMakeLists.txt
FSM/: generate_verilator_walker.sh  ledWalker.v  sim_walker.cpp
cmake/: blinky.cmake  busMaster.cmake  clock_overflow.cmake  led_walker.cmake  thruwire.cmake
hiZBus/: busMaster.v  generate_verilator_bus.sh  sim_bus.cpp
notes/: guide_for_verilog.txt  resources.md
registers/: blinky.v  sim_blinky.cpp
registers/blinky/: generate_verilator_blinky.sh
registers/clock_overflow/: clock_overflow.v  generate_verilator_overflow.sh  sim_overflow.cpp
wires/: generate_verilator_thruwire.sh  sim_thruwire.cpp  thruwire.v
